force-app/main/default/objects/Mock_Callout_Mapping__mdt/Mock_Callout_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Mock Callout Mapping</label>
    <pluralLabel>Mock Callout Mappings</pluralLabel>
</CustomObject>