force-app/main/default/objects/Mock_Callout_Mapping__mdt/fields/Error_HTTP_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_HTTP_Code__c</fullName>
    <label>Error HTTP Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>