force-app/main/default/objects/Mock_Callout_Mapping__mdt/fields/Error_Method__c.field-meta.xml
<CustomField>
    <fullName>Error_Method__c</fullName>
    <defaultValue>&quot;POST&quot;</defaultValue>
    <label>Error Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
                <default>true</default>
                <label>GET</label>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>HEAD</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
            <value>
                <fullName>OPTIONS</fullName>
            </value>
            <value>
                <fullName>CONNECT</fullName>
            </value>
            <value>
                <fullName>TRACE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>