force-app/main/default/objects/Mock_Callout_Mapping__mdt/fields/Error_Static_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Error_Static_Resource_Name__c</fullName>
    <label>Error Static Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>