force-app/main/default/objects/Mock_Callout_Mapping__mdt/fields/Include_Params__c.field-meta.xml
<CustomField>
    <fullName>Include_Params__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include string after &apos;?&apos; to match endpoint?</description>
    <label>Include Params?</label>
    <type>Checkbox</type>
</CustomField>