force-app/main/default/objects/Mock_Callout_Mapping__mdt/fields/Success_HTTP_Code__c.field-meta.xml
<CustomField>
    <fullName>Success_HTTP_Code__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Success HTTP Code</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>