force-app/main/default/objects/Mock_Callout_Mapping__mdt/fields/Success_Static_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Success_Static_Resource_Name__c</fullName>
    <description>Static Resource name to pull the JSON from</description>
    <label>Success Static Resource Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>